--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -22,15 +22,12 @@ jobs:
         run: |
           pip install kaggle numpy
 
-      - name: Set up Kaggle credentials
-        run: |
-          mkdir -p ~/.kaggle
-          echo "$KAGGLE_JSON" > ~/.kaggle/kaggle.json
-          chmod 600 ~/.kaggle/kaggle.json
-
       - name: Download competition data
-        run: |
-          kaggle competitions download -c google-code-golf-2025 -p ./data
+         env:
+           KAGGLE_USERNAME: ${{ secrets.KAGGLE_USERNAME }}
+           KAGGLE_KEY: ${{ secrets.KAGGLE_KEY }}
+         run: |
+           kaggle competitions download -c google-code-golf-2025 -p ./data
 
       - name: Unzip competition files into problems/
         run: |
