--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,5 @@ requests==2.32.4
 pandas==2.3.1
 numpy>=1.24.0
 interegular==0.3.3
-openjij==0.11.3
-jijmodeling
-ommx-openjij-adapter
 zopfli==0.2.3.post1
+optuna==4.5.0
