--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -33,3 +33,10 @@ jobs:
 
       - name: Validate submissions
         run: python -W ignore::SyntaxWarning validate.py
+
+      - name: Upload submission
+        env:
+          KAGGLE_USERNAME: ${{ secrets.KAGGLE_USERNAME }}
+          KAGGLE_KEY: ${{ secrets.KAGGLE_KEY }}
+        run: |
+          python prepare_submission.py | xargs -I{} kaggle competitions submit -c google-code-golf-2025 -f submission.zip -m "$(git rev-parse --short HEAD), {}"
